src/styles/_home.scss
section.home-content-wrapper {
  div.home-header {
    margin-top: 30px;
    img {
      width: 100%;
      display: block;
    }
  }
  div.home-featured-image-wrapper {
    .slide {
      position: relative;
      img {
        display: block;
        width: 100%;
        object-fit: cover;
        height: 100%;
      }

      .placeholder-img-cover {
        height: 100%;
        width: 100%;
        position: absolute;
        top: 0;
        opacity: 0.62;
        mix-blend-mode: multiply;
        background-color: rgba(0, 0, 0, 0.5);
      }

      div.featured-image-text {
        position: absolute;
        bottom: 20px;
        right: 30px;
        p {
          font-size: 14px;
          font-weight: normal;
          font-style: normal;
          font-stretch: normal;
          line-height: 1.71;
          letter-spacing: normal;
          text-align: right;
          color: #ffffff;
          margin: 0;
        }
      }
    }
  }

  div.home-content {
    p {
      font-size: 16px;
      font-weight: normal;
      font-style: normal;
      font-stretch: normal;
      line-height: 1.5;
      letter-spacing: normal;
      text-align: center;
      color: #7a7a7a;
      margin-top: 10px;
      margin-bottom: 30px;
    }

    .cta-wrapper {
      display: flex;
      justify-content: space-between;

      @include breakpoint(small){
        .cta_button { // responsive overrides for CTA defaults
          min-width: 40vw !important;
          padding: 16px 3vw !important;
        }
      }
    }
  }

  @include breakpoint(small){
    div.home-content {
      div.home-video-section {
        display: flex;
        align-items: center;
        justify-content: space-between;
        border-top: solid 1px #e4e4e4;
        margin-top: 40px;
        padding: 0 $mobile-gutter;
      }
      p.home-video-text-wrapper {
        margin: 0 0 0 16px;
        text-align: left;
        span {
          font-size: 10px;
          font-weight: 500;
          font-style: normal;
          font-stretch: normal;
          line-height: 1.6;
          letter-spacing: 2px;
          color: #3b373a;
          text-transform: uppercase;
        }
      }
    }
  }
  
}
@include breakpoint(medium-up){
  div.featured-image-text {
    position: absolute;
    bottom: 35px;
    right: 60px;
  }

  section.home-content-wrapper {
    div.home-header {
      margin-top: 14vh;
    }

    display: flex;
    justify-content: flex-end;
    div.home-featured-image-wrapper {
      width: 56%;
      order: 2;

      .slide {
        height: calc(100vh - #{$desktop-header-height});
        max-height: 1440px;
        min-height: 919px;
      }
    }
    div.home-content {
      width: 410px;
      margin: 0 auto;
      padding-left: 10px;
      padding-right: 10px;
      order: 1;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      div.home-content-text {
        height: 59%;
        display: flex;
        flex-direction: column;
        justify-content: flex-end;
      }
      h2 {
        display: block;
        margin: 0 0 24px;
        width: 400px;
        font-family: BetterTimes;
        font-size: 72px;
        font-weight: normal;
        font-style: normal;
        font-stretch: normal;
        line-height: 0.89;
        letter-spacing: normal;
        text-align: center;
        color: #3b373a;
      }

      p {
        font-size: 18px;
        font-weight: normal;
        font-style: normal;
        font-stretch: normal;
        line-height: 1.78;
        letter-spacing: normal;
        text-align: center;
        color: #7a7a7a;
        margin-top: 24px;
        margin-bottom: 48px;
      }

      .cta-wrapper {
        display: flex;
        justify-content: center;
        span {
          &#hs_cos_wrapper_home-brand {
            margin-right: 10px;
          }
          &#hs_cos_wrapper_home-creator {
            margin-left: 10px;
          }
        }
      }

      #hs_cos_wrapper_home-video-text {
        font-size: 12px;
        font-weight: 500;
        font-style: normal;
        font-stretch: normal;
        line-height: 1.67;
        letter-spacing: 2px;
        text-align: center;
        color: #3b373a;
        text-transform: uppercase;
        width: 240px;
        margin: 20px auto auto;
        display: block;
      }
    }
  }
}

